# qmc-decoder

./: CMakeLists.txt
.github/workflows/: main.yml
src/: decoder.cpp  main.cpp  seed.hpp
